<resources>
    <string name="app_name">Administrador de tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="remember_user">Recordar mi usuario en este dispositivo</string>
    <string name="start">Iniciar</string>
    <string name="not_have_account">No tengo una cuenta</string>
    <string name="create_account">Crear cuenta</string>
    <string name="full_name">Nombre completo</string>
    <string name="signup">Registrarme</string>
    <string name="already_have_account">Ya tengo una cuenta</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="recover">Recuperar</string>
    <string name="is_required">Es requerido</string>
    <string name="recovery_email_sent">Hemos enviado un correo para que recuperes tu contraseña</string>
    <string name="accept">Aceptar</string>
    <string name="task_description">Texto de la tarea</string>
    <string name="add_a_photo">Agrega una foto</string>
    <string name="save">Guardar</string>
    <string name="finish_date_template">Finaliza el: %1$s</string>

</resources>
